# jsonype

./: .gitignore  .pylint-spell-dictionary  .pylint-spell-dictionary.dic  .readthedocs.yaml  CHANGELOG.md  Pipfile  README.md  SECURITY.md  build.sh  check.sh  checkImports.sh  publish.sh  pyproject.toml  release.sh  test.sh  tox.ini
.github/: codeql-config.yaml  dependabot.yaml  scorecard-policy.yaml
.github/workflows/: build.yaml  codeql.yml  demo.wf  dependabot-actions.yaml  scorecard.yml
docs/: Makefile
docs/source/: conf.py  index.rst  jsont.rst  jsonype.rst  modules.rst
jsont/: __init__.py  basic_from_json_converters.py  basic_to_json_converters.py  typed_json.py
jsonype/: __init__.py  base_types.py  basic_from_json_converters.py  basic_to_json_converters.py  dataclass_converters.py  named_tuple_converters.py  simple_str_based_converters.py  time_converters.py  typed_json.py
tests/jsont/: test_typed_json.py
tests/jsonype/: base_types.py  conftest.py  test_basic_from_json_converters.py  test_basic_to_json_converter.py  test_dataclass_converters.py  test_named_tuple_converters.py  test_time_converters.py  test_typed_json.py
